css/main.css
@import "fonts.css";

#about-sarah-paragraph-one p {
  padding-top: 40px;
}

#entire-page-wrapper {
  padding: 36px;
}

#scrollable-menu-content {
  padding: 40px;
  position: absolute;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
  height: 100%;
}

#popout-nav {
  margin-right: -375px;
  padding: 0;
  min-width: 375px;
  max-width: 375px;
  min-height: 100vh;
  right: 0;
  z-index: 1;
  position: fixed;
  box-shadow: -3px 0px 10px #00000020;
  background-color: #3E1C49;
  transition: all 0.5s;
}

#popout-nav.active {
  margin-right: 0;
}

#close-menu-button {
  position: relative;
  left: 326px;
  top: 25px;
  background-image: url("../images/close.svg");
  height: 30px;
  width: 30px;
  background-position: center;
  background-size: cover;
  cursor: pointer;
  z-index: 1;
}

#close-menu-button:hover {
  background-image: url("../images/close_hover.svg");
}

#menu-contact a,
#menu-phone-number a,
#menu-gmail a {
  cursor: default;
}

#menu-contact a:hover {
  color: #fdfdfd;
}

#menu-contact {
  padding-bottom: 30px;
}

#menu-contact-information a {
  margin-left: 10px;
  font-family: RobotoCondensed-BoldItalic;
  text-decoration: none;
  vertical-align: middle;
  font-size: 16px;
  background-color: #3E1C49;
  color: #fdfdfd;
  letter-spacing: 1px;
}

#menu-contact-information img {
  width: 32px;
}

#menu-linkedin p,
#menu-linkedin .menu-logo-hover {
  margin: 0;
  display: inline-block;
  vertical-align: middle;
}

#menu-linkedin .menu-logo-hover {
  margin: 10px 10px 10px 0;
  background-image: url("../images/linkedin_logo_white.svg");
  height: 32px;
  width: 32px;
  background-position: center;
  background-size: cover;
}

#menu-linkedin:hover .menu-logo-hover {
  background-image: url("../images/linkedin_logo_green.svg");
}

#menu-github p,
#menu-github .menu-logo-hover {
  margin: 0;
  display: inline-block;
  vertical-align: middle;
}

#menu-github .menu-logo-hover {
  margin: 10px 10px 10px 0;
  background-image: url("../images/github_logo_white.svg");
  height: 32px;
  width: 32px;
  background-position: center;
  background-size: cover;
}

#menu-github:hover .menu-logo-hover {
  background-image: url("../images/github_logo_green.svg");
}

#menu-linkedin:hover p,
#menu-github:hover p,
#resume-download a:hover {
  color: #1FBBA6;
}


#menu-phone-number img,
#menu-gmail img,
#menu-linkedin img,
#menu-github img {
  margin: 10px 0 10px 10px;
  vertical-align: middle;
}

#resume-download {
  padding: 60px 0 30px 0;
}

#resume-download a {
  font-size: 18px;
}

#hamburger {
  position: fixed;
  top: 36px;
  right: 36px;
  cursor: pointer;
}

#hamburger #hamburger-hover-state {
  height: 26px;
  width: 26px;
  background-image: url("../images/hamburger_menu_final.svg");
  background-position: center;
  background-size: cover;
}

#hamburger #hamburger-hover-state:hover {
  background-image: url("../images/hamburger_menu_hover.svg");
}

#landing-page {
  background: url("../images/landing_page_image_hills.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  height: 100vh;
  min-width: 100%;
  color: #FDFDFD;
  font-family: Kalam-Regular;
}

#landing-title {
  position: absolute;
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  text-align: center;
}

#landing-title img {
  max-width: 100%;
}

#down-arrow {
  position: absolute;
  transform: translateX(-50%);
  left: 50%;
  bottom: 20px;
}

#down-arrow img {
  height: 28px;
}

#three-dots-after-landing {
  padding: 180px 0 60px 0;
  text-align: center;
}

#about-sarah-section {
  position: relative;
  font-family: RobotoCondensed-Regular;
  font-size: 18px;
  letter-spacing: 1px;
  text-align: center;
}

#about-sarah-paragraph-four {
  font-family: RobotoCondensed-BoldItalic;
}

#about-sarah-paragraph-one p,
#about-sarah-paragraph-two p,
#about-sarah-paragraph-three p {
  margin-bottom: 20px;
}

#sarah-signature {
  padding: 100px 0 140px 0;
  text-align: center;
}

#sarah-signature img {
  max-width: 100%;
}

#portfolio-fitnest-logo,
#portfolio-cnbc-logo {
  margin: 0 auto;
  width: 90px;
}

#portfolio-amazon-logo,
#portfolio-medium-logo,
#portfolio-bulk-logo {
  margin: 0 auto;
  width: 145px;
}

#footer-contact {
  font-family: RobotoCondensed-Italic;
  color: #474747;
  font-size: 20px;
  letter-spacing: 1px;
}

#footer-phone-number img,
#footer-gmail img {
  margin: 10px 10px 10px 0;
  display: inline-block;
}

#footer-phone-number p,
#footer-gmail p {
  cursor: default;
  display: inline-block;
}

#footer-linkedin p {
  display: inline-block;
}

#footer-linkedin .footer-logo-hover {
  margin: 10px 10px 10px 0;
  background-image: url("../images/linkedin_logo_green.svg");
  height: 38px;
  width: 38px;
  display: inline-block;
  background-position: center;
  background-size: cover;
}

#footer-linkedin:hover .footer-logo-hover {
  background-image: url("../images/linkedin_logo_black.svg");
}

#footer-linkedin,
#footer-github {
  color: #474747;
  text-decoration: none;
}

#footer-github p {
  margin: 0;
  display: inline-block;
  color: #474747;
  vertical-align: middle;
}

#footer-github .footer-logo-hover {
  margin: 10px 10px 10px 0;
  background-image: url("../images/github_logo_green.svg");
  height: 38px;
  width: 38px;
  display: inline-block;
  background-position: center;
  background-size: cover;
}

#footer-github:hover .footer-logo-hover {
  background-image: url("../images/github_logo_black.svg");
}

#resume-link {
  margin: 100px 0 50px 0;
}

#resume-link a {
  margin: 100px 0 50px 0;
  font-family: RobotoCondensed-BoldItalic;
  font-size: 20px;
  color: #474747;
  letter-spacing: 1px;
}

#resume-link a:hover,
#footer-linkedin:hover p,
#footer-github:hover p {
  color: #000;
  text-decoration: none;
}

#footer-copyright p {
  margin: 100px 0 50px 0;
  font-family: RobotoCondensed-Italic;
  font-size: 12px;
}

#footer-small-swish {
  position: relative;
  clear: both;
  top: 65px;
  right: 36px;
  z-index: -1;
}

#footer-large-swish {
  position: relative;
  margin-bottom: -210px;
  bottom: 210px;
  left: 36px;
  z-index: -1;
  float: right;
}

#page-header {
  padding: 21px 15px 0px;
  font-family: Kalam-Bold;
  font-size: 40px;
  color: #474747;
}

#full-design-button {
  position: fixed;
  bottom: 36px;
  right: 36px;
  padding: 4px;
  background-color: #3E1C49;
  border-radius: 37px;
  cursor: pointer;
  z-index: 1;
}

#bfull-design-button img {
  margin-top: -1px;
  margin-bottom: 1px;
  height: 56px;
}

#full-design-button span {
  display: inline-block;
  max-width: 0;
  transition: max-width 1s, padding .2s ease .25s;
  vertical-align: middle;
  white-space: nowrap;
  overflow: hidden;
  color: #FDFDFD;
  font-family: RobotoCondensed-Regular;
  font-size: 16px;
  letter-spacing: 1px;
}

#full-design-button:hover span {
  max-width: 300px;
  padding-right: 14px;
}

.menu-wrapper {
  display: flex;
  width: 100%;
  align-items: stretch;
  position: fixed;
  top: 0;
  z-index: 2;
}

a[data-toggle="collapse"] {
  position: fixed;
}

.menu {
  margin: 50px 0 0 10px;
  list-style-type: none;
}

.menu a, .menu p {
  margin-bottom: 0;
  font-family: Kalam-Bold;
  font-size: 20px;
  background-color: #3E1C49;
  color: #fdfdfd;
  letter-spacing: 1px;
  text-decoration: none;
}

.menu a:hover {
  color: #1FBBA6;
}

.menu-content-item {
  padding-bottom: 30px;
}

.three-dots {
  padding: 180px 0;
  clear: both;
  text-align: center;
}

.three-dots-footer {
  padding-top: 180px;
  clear: both;
  text-align: center;
}

.section-header-title {
  margin: 0;
  padding: 0;
  font-family: Kalam-Bold;
  font-size: 40px;
  color: #474747;
}

.section-header-green-line {
  margin-bottom: 100px;
  height: 3px;
  width: 100px;
  background: #1FBBA6;
}

.menu-green-line {
  margin: 30px 0;
  height: 2px;
  width: 100px;
  background: #1FBBA6;
}

.portfolio-wrapper {
  width: fit-content;
  margin: 0 auto;
}

a.portfolio-column {
  text-align: center;
  text-decoration: none;
}

.portfolio-column:hover p {
  color: #1FBBA6;
}

.portfolio-column p {
  margin-top: 40px;
  font-family: RobotoCondensed-Bold;
  font-size: 18px;
  color: #3E1C49;
  text-decoration: none;
}

.portfolio-column .portfolio-logo {
  width: 180px;
  height: 180px;
  align-items: center;
  overflow: hidden;
  border: 4px solid #3E1C49;
  display: inline-block;
}

.portfolio-column:hover .portfolio-logo {
  border: 4px solid #1FBBA6;
}

.footer-logo-hover {
  margin: 0;
  display: block;
  color: #474747;
  vertical-align: middle;
}

.footer-container {
  padding-top: 46px;
}

.section-header-top-margin {
  margin-top: 100px;
}

.section-image {
  width: 100%;
  margin: auto;
  text-align: center
}

.section-image img {
  max-width: 100%;
  cursor: pointer
}

.show {
  z-index: 3;
  display: none;
}

.show.active {
  display: block;
}

.show .overlay {
  display: block;
  width: 100%;
  height: 100%;
  background: #fff;
  position: fixed;
  top: 0;
  left: 0;
}

.show .img-show {
  width: 90%;
  height: 100%;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  overflow: hidden;
}

.img-show img {
  width: 80%;
  height: auto;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: fixed;
}

.close-button {
  width: 40px;
  position: fixed;
  right: 32px;
  top: 32px;
  cursor: pointer;
  opacity: 0.5;
  z-index: 1;
}

.close-button:hover {
  opacity: 1;
}

.section-header p {
  margin-bottom: 100px;
  font-family: RobotoCondensed-Bold;
  font-size: 24px;
  letter-spacing: 1px;
  text-align: center;
}

.section-information p {
  font-family: RobotoCondensed-Regular;
  font-size: 18px;
  letter-spacing: 1px;
}

.section-information {
  align-self: center;
}

.source-code {
  margin-top: 50px;
}

.source-code a {
  padding: 8px;
  font-family: RobotoCondensed-Bold;
  font-size: 20px;
  color: #3E1C49;
  border: 2.5px solid #3E1C49;
  text-decoration: none;
}

.source-code a:hover {
  color: #1FBBA6;
  border: 2.5px solid #1FBBA6;
}

@media (max-width: 1000px) {
  .verbiage {
    padding: 50px 25px 0;
    text-align: center;
  }

  .source-code {
    text-align: center;
  }
}

@media (max-width: 850px) {
  #page-header {
    padding: 0;
    font-size: 35px;
  }

  #hamburger {
    top: 46px;
    width: 24px;
  }

  .section-header-title {
    font-size: 35px;
  }

  .footer-container {
    padding: 46px 0 0 0;
  }

  .section-image img {
    max-width: 80%;
  }
}

@media (max-width: 450px) {
  #page-header {
    font-size: 31px;
  }

  #footer-contact a {
    font-size: 18px;
  }

  #footer-phone-number img,
  #footer-gmail img {
    height: 31px;
  }

  #footer-github .footer-logo-hover,
  #footer-linkedin .footer-logo-hover,
  #footer-github:hover .footer-logo-hover,
  #footer-linkedin:hover .footer-logo-hover {
    height: 31px;
    width: 31px;
  }
}

@media (max-width: 400px) {
  #page-header {
    font-size: 32px;
  }
}

